tests/reference/asr-generics_02-e2ea5c9.stderr
semantic error: Both type variables must support addition operation
 --> tests/../integration_tests/generics_02.py:6:12
  |
6 |     return x + y
  |            ^^^^^ 
